--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 ACTUAL_API_SERVER_URL=https://actual.net.dn/
 ACTUAL_API_PORT=31001
-ACTUAL_API_DATA_DIR=./actual-budget-api
+ACTUAL_API_LISTEN_ADDR=localhost
+ACTUAL_API_DATA_DIR=/var/cache/actual-budget-api
