feat: add log level

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ ACTUAL_API_SERVER_URL=https://actual.net.dn/
 ACTUAL_API_PORT=31001
 ACTUAL_API_LISTEN_ADDR=localhost
 ACTUAL_API_DATA_DIR=/var/cache/actual-budget-api
+ACTUAL_API_LOG_LEVEL=info
